[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/SpikeTrap/spike.png" type="Texture" id=1]
[ext_resource path="res://Enemies/SpikeTrap.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="SpikeTrap" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -12, -10, 8, 0, 10, 10, 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_frame_changed"]
